Fixed setting participator count on ModuleCreateComponent
