# frontend/swagger.json
@@ -1419,6 +1419,10 @@
           "moduleDescription": {
             "type": "string",
             "nullable": true
+          },
+          "maxParticipants": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
